# cann-recipes-infer

./: .gitignore  AGENTS.md  CONTRIBUTION.md  README.md  Third_Party_Open_Source_Software_Notice  classify_rule.yaml
.agent/: README.md
.agent/agents/: model-infer-reviewer.md
.agent/hooks/: post_tool_use.py  pre_tool_use.py
.agent/skills/: README.md
.agents/: README.md  settings.json
.agents/agents/: model-infer-analyzer.md  model-infer-implementer.md  model-infer-reviewer.md
.agents/hooks/: subagent_stop.py  time_reminder.py
benchmark/: benchmark.md
benchmark/evalscope_scripts/: eval_longbench.py
contrib/minimax_m2.5_mxfp4/: README.md  run_vllm.sh
contrib/vllm-deepseek-ocr-2/: README.md  convert_to_npu.sh
contrib/vllm-deepseek-ocr2/: README.md  benchmark.py  config.py  deepseek_ocr2.py  deepseek_ocr2_npu.py  run_dpsk_ocr2_eval_batch.py  run_dpsk_ocr2_image.py  run_dpsk_ocr2_pdf.py  run_inference_sync.py  set_env_reliable.sh
docs/agent/: model-infer-optimize-design.md  skill-design.md  sota-approach-skill-design.md
docs/cann/: multi_stream_principles.md  npu_graph_optimization.md  prefetch_principles.md  super_kernel.md
docs/common/: inference_config_guide.md  model_runner_guide.md  mtp_model_guide.md  new_model_checklist.md
docs/design/: executor_design.md  inference_config_guide.md  kv_cache_design.md  mm_inference_design.md  mtp_design.md  multi_stream_principles.md  offline_inference_design.md  online_inference_design.md
executor/: infer.py  model_runner.py
executor/core/: __init__.py  support_models.py  (+1 more)
models/sana-video/: README.md  infer.sh  infer_platform.sh  pyproject.toml
models/sana-video/config/: 2b_480p_single.yaml  2b_480p_single_a4w4.yaml  2b_480p_single_a8w8.yaml  2b_480p_single_platform.yaml  README.md
models/sana-video/diffusion/model/: norms.py
models/sana-video/diffusion/model/dc_ae/efficientvit/models/nn/: norm.py  ops_3d.py
models/sana-video/diffusion/model/nets/: basic_modules.py  sana_blocks.py
models/sana-video/inference_video_scripts/: inference_sana_video.py
models/sana-video/patches/: __init__.py  npu_patches.py  quant_module.py
module/: fuse_moe_gmm.py  linear.py  vae_patch_parallel.py
scripts/: init-agent.sh
(+1424 files in other folders)
