[build-system]
requires = ["setuptools>=61.0,<82"]
build-backend = "setuptools.build_meta"

[project]
name = "sana"
version = "0.2.0"
description = "SANA"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "setuptools>=61.0,<82",
    "torch==2.6.0",
    "torch-npu==2.6.0",
    "numpy<2",
    "pre-commit==4.5.0",
    "huggingface-hub==0.36.0",
    "accelerate==1.0.1",
    "beautifulsoup4==4.14.3",
    "bs4==0.0.2",
    "came-pytorch==0.1.3",
    "einops==0.8.2",
    "ftfy==6.3.1",
    "wheel==0.46.3",
    "psutil==5.9.8",
    "ninja==1.13.0",
    "diffusers==0.36.0",
    "clip@git+https://github.com/openai/CLIP.git",
    "gradio==6.13.0",
    "image-reward==1.5",
    "ipdb==0.13.13",
    "omegaconf==2.3.0",
    "optimum==2.1.0",
    "patch_conv==0.0.1b0",
    "peft==0.17.0",
    "protobuf==5.29.6",
    "pytorch-fid==0.3.0",
    "regex==2026.4.4",
    "sentencepiece==0.2.1",
    "tensorboard==2.20.0",
    "tensorboardX==2.6.5",
    "timm==0.6.13",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "transformers==4.57.0",
    "wandb==0.26.0",
    "webdataset==1.0.2",
    "yapf==0.43.0",
    "spaces==0.48.3",
    "matplotlib==3.10.8",
    "termcolor==3.3.0",
    "pyrallis==0.3.1",
    "fire==0.7.1",
    "moviepy==2.2.1",
    "imageio[pyav,ffmpeg]",
    "qwen-vl-utils==0.0.14",
    "lmdb==2.2.0",
    "mmengine==0.10.7"
]


[project.scripts]
sana-run = "sana.cli.run:main"
sana-upload = "sana.cli.upload2hf:main"

[project.optional-dependencies]

[project.urls]


[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*", "data*", "output*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*", "data*", "output*"]
